[package]
name = "pomo"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.28"
ratatui = { version = "0.29.0", features = [
  "crossterm",
  "macros",
  "all-widgets",
] }
rodio = "0.19.0"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
serde_millis = "0.1.1"
strum = "0.26.3"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.9"
